# embed

./: .gitignore  Cargo.toml  Spacefile  build.sh  readme.md
src/: main.rs
src/crates/app/: configure.rs  server.rs
src/crates/app/routes/: embed.rs  mod.rs  player.rs
static/: embed.hbs
static/templates/: embed.hbs
